# SJU-CPU

./: CMakeLists.txt  README.md
include/: include.hpp  model.hpp  sju_assembler.hpp  sju_cpu.hpp  sju_debugger.hpp  sju_instruction_parser.hpp
src/: main.cpp  sju_assembler.cpp  sju_cpu.cpp  sju_debugger.cpp  sju_instruction_parser.cpp
test/: CMakeLists.txt  sju_cpu_test.cpp
test/sji/: test01.sji  test02.sji  test03.sji  test04.sji  test05.sji
